    - Implemented memory leak protection in `RendererAgent` by automatically restarting the browser context every 50 requests.
    - Updated `config.ts` to include `USE_RENDERER` environment variable.
    - Added `tests/renderer.test.ts` to verify SPA rendering and network idle waiting.
    - Updated orchestrator (`src/index.ts`) to gracefully initialize and close the `RendererAgent`.

- Advanced Processing & Scale Foundation:
    - Implemented Spider Trap Protector in `ParserAgent` (URL depth limits & Path-repetition detection algorithm).
    - Implemented Domain Restriction Filter in `ParserAgent` to prevent escaping the original target domain.
    - Updated `tests/parser.test.ts` to verify domain restriction and spider trap handling.

    
Bugs Found 
- Too Deep Fetching
    - Description: 
    When trying to crawl SRV, it scraped the index file after using the renderer, but after encountering youtube video links it then fetched from the youtube site.

    - Fixes: 
    Implemented Domain Restriction Filter in ParserAgent to prevent the crawler from escaping the original target domain.
    Refined Domain Restriction Filter to allow 1-hop embedded links (like youtube or tiktok) from the seed domain but restrict further out-of-bounds crawling by passing originalDomain through the Frontier Queue.
    
Developer: Jan Dale 

Feb 20, 2026 
Developer: Reynaldo 
- Initialized MVP Development: 
    - Set up project structure with Bun and TypeScript.
    - Implemented `FetcherAgent` for core HTML fetching pipeline.
    - Integrated Redis (`bull`) as the URL Frontier queue.
    - Integrated MongoDB as the Storage Service for raw HTML and parsed metadata.
    - Implemented `ParserAgent` using Cheerio to extract titles and links.
    - Implemented `DuplicateEliminator` using a Bloom Filter for URL deduplication.
    - Added DNS Caching (`cacheable-lookup`) and Rate Limiting politeness controls.
    - Added `robots.txt` parsing to respect site crawling rules.