@@ -10,4 +10,5 @@ export const config = {
 		process.env.USER_AGENT || "MyCrawler/2.0 (+http://example.com/bot)",
 	useRenderer:
 		process.env.USE_RENDERER === "true" || process.env.USE_RENDERER === "1",
+	simhashThreshold: parseInt(process.env.SIMHASH_THRESHOLD || "3", 10),
 };
